test_regress/t/t_param_type_bad3.v
// DESCRIPTION: Verilator: Verilog Test module
//
// This file ONLY is placed under the Creative Commons Public Domain, for
// any use, without warranty, 2019 by Wilson Snyder.
// SPDX-License-Identifier: CC0-1.0

module t;
   localparam int PI = 6;
   localparam type P_T = PI;  // Bad
endmodule
